--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <!-- Our CSS -->
-    <link rel="stylesheet" type="text/css" href="static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="Earthquake_Challenge/static/css/style.css">
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,10 +28,10 @@
         crossorigin=""></script>
 
     <!-- API key -->
-    <script type="text/javascript" src="static/js/config.js"></script>
+    <script type="text/javascript" src="Earthquake_Challenge/static/js/config.js"></script>
 
     <!-- Our JavaScript -->
-    <script type="text/javascript" src="static/js/Challenge_logic.js"></script>
+    <script type="text/javascript" src="Earthquake_Challenge/static/js/Challenge_logic.js"></script>
 
 </body>
 
